--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "postversion": "node scripts/postversion.js"
   },
   "dependencies": {
+    "lightweight-charts": "^3.0.0",
     "vue": "^2.6.11",
     "vue-meta": "^2.3.3",
     "vue-router": "^3.1.6",
@@ -37,6 +38,7 @@
     "eslint-plugin-vuetify": "^1.0.0-beta.6",
     "lodash": "^4.17.15",
     "open": "^7.0.3",
+    "prettier": "1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "shelljs": "^0.8.4",
