--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "postversion": "node scripts/postversion.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "lightweight-charts": "^3.0.0",
     "vue": "^2.6.11",
     "vue-meta": "^2.3.3",
